# kiwi-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kiwi_core/: __init__.py
src/kiwi_core/agents/: __init__.py  base.py  competition_prep.py  critique.py  daily_brief.py  meal_plan.py  n_of_1.py  orchestrator.py  planning.py  protocol.py  question_gen.py  recommender.py  risk_screen.py  sports_agent.py  stack_optimizer.py  synthesis.py  systematic_review.py  training_plan.py
src/kiwi_core/memory/: __init__.py  client_manager.py  interventions.py  preferences.py  profile.py  progress.py  session_log.py  sessions.py  store.py  watch_list.py
src/kiwi_core/tools/: __init__.py  biomarkers.py  body_composition.py  calculations.py  effect_size.py  environmental.py  exporter.py  female_athlete.py  food_database.py  grade.py  hydration.py  injury_prevention.py  openalex.py  (+9 more)
tests/: conftest.py  test_agent_integration.py  test_agents.py  test_biomarkers.py  test_body_composition.py  test_client_manager.py  test_effect_size.py  test_environmental.py  test_exporter.py  test_female_athlete.py  test_food_database.py  test_grade.py  test_hydration.py  test_injury_prevention.py  test_interactions.py  test_interventions.py  test_mental_performance.py  test_openalex.py  test_periodization.py  test_preferences.py  test_profile.py  test_progress.py  test_race_predictor.py  test_recovery.py  test_session_log.py  test_sessions.py  test_sleep_optimizer.py  test_smoke.py  test_sports_agent.py  test_supplements.py  test_training_zones.py  test_watch_list.py
