[tool.poetry]
name = "kiwi-core"
version = "0.2.0"
description = "Shared Kiwi tools, agents, and memory primitives — used by nellymarq/kiwi, nellymarq/calsanova, nellymarq/rwql."
authors = ["Nelly Marques <nmarques1113@gmail.com>"]
readme = "README.md"
license = "Proprietary"
packages = [{include = "kiwi_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.80.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "BLE001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
